--- a/frontend/src/styles/ContactPage.css
+++ b/frontend/src/styles/ContactPage.css
@@ -1,6 +1,6 @@
 .contact-page-section {
   padding: 60px 20px;
-  background: linear-gradient(to left, #ffffff, #a2e794);
+  background: linear-gradient(to left, #ffffff, #9CBE30);
   min-height: 100vh;
   display: flex;
   width: 100%;
